--- a/index.html
+++ b/index.html
@@ -1,10 +1,13 @@
-my page.
+<!doctype html>
+<html>
 
-
-                                   
-
-
-
-
-
-                                                   
+<head>
+  <title> Code Jericho </title>
+  </head>
+  
+  <body>
+Welcome to the hub of Jericho
+    here is my <a href="/flappy">Flappy bird clone.</a>
+  </body>
+  
+</html>
