--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   
   <body>
 Welcome to the hub of Jericho
-    here is my <a href="/flappy">Flappy bird clone </a> i think i fixed for sure maybe hopefully <a href="/Agario"> Agario clone. </a>
+    here is my <a href="/flappy">Flappy bird clone
   </body>
   
 </html>
